4.5/8a59f3ccbc11fcb222b046a64929dd473f7dff54
perf stat: Fix recort_usage typo

Markus reported gcc 6 complains when compiling perf stat command:

  builtin-stat.c:1591:27: error: ‘recort_usage’ defined but not used
  [-Werror=unused-const-variable]
   static const char * const recort_usage[] = {
                             ^~~~~~~~~~~~

I fixed the typo and realized we already export record_usage, so I also
prefixed it with stat (and included report_usage).

Reported-by: Markus Trippelsdorf <markus@trippelsdorf.de>
Signed-off-by: Jiri Olsa <jolsa@kernel.org>
Cc: David Ahern <dsahern@gmail.com>
Cc: Namhyung Kim <namhyung@kernel.org>
Cc: Peter Zijlstra <a.p.zijlstra@chello.nl>
Link: http://lkml.kernel.org/r/1452591329-27620-1-git-send-email-jolsa@kernel.org
Signed-off-by: Arnaldo Carvalho de Melo <acme@redhat.com>

